fix: enable vertical scrollbar on page container

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
+body.no-scroll {
+  overflow: auto !important;
+}
+
+.page-container.scrollable {
+  overflow-y: auto;
+  height: calc(100vh - 60px);
+}
